--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -16,7 +16,7 @@
                 <div class="best-seller">
                     <article class="game game1">
                         <div class="container-img">
-                            <img class="imagen" src="/images/cod.png" alt="Call of Duty">
+                            <img class="imagen" src="/images/productImages/cod.png" alt="Call of Duty">
                         </div>
 
                         <div class="info">
@@ -33,7 +33,7 @@
                     </article>
                     <article class="game game2">
                         <div class="container-img">
-                            <img class="imagen" src="/images/fifa-22.png" alt="Fifa 22">
+                            <img class="imagen" src="/images/productImages/fifa-22.png" alt="Fifa 22">
                         </div>
                         <div class="info">
                             <h3 class="name">Fifa 22</h3>
@@ -49,7 +49,7 @@
                     </article>
                     <article class="game game3">
                         <div class="container-img">
-                            <img class="imagen" src="/images/age-of-empire-2.jpg" alt="Age Of Empire 2">
+                            <img class="imagen" src="/images/productImages/age-of-empire-2.jpg" alt="Age Of Empire 2">
                         </div>
 
                         <div class="info">
@@ -66,7 +66,7 @@
                     </article>
                     <article class="game game4">
                         <div class="container-img">
-                            <img class="imagen" src="/images/motogp21.png" alt="Moto GP 21">
+                            <img class="imagen" src="/images/productImages/motogp21.png" alt="Moto GP 21">
                         </div>
 
                         <div class="info">
@@ -89,7 +89,7 @@
                 <div class="comming-soon">
                     <article class="game game5">
                         <div class="container-img">
-                            <img class="imagen" src="/images/overwatch.png" alt="Overwatch">
+                            <img class="imagen" src="/images/productImages/overwatch.png" alt="Overwatch">
                         </div>
                         <div class="info">
                             <h3 class="name">Overwatch</h3>
@@ -99,7 +99,7 @@
                     </article>
                     <article class="game game6">
                         <div class="container-img">
-                            <img class="imagen" src="/images/residentevil.png" alt="Resident Evil 8">
+                            <img class="imagen" src="/images/productImages/residentevil.png" alt="Resident Evil 8">
                         </div>
                         <div class="info">
                             <h3 class="name">Resident Evil 8</h3>
@@ -109,7 +109,7 @@
                     </article>
                     <article class="game game7">
                         <div class="container-img">
-                            <img class="imagen" src="/images/hotline.png" alt="Hotline Miami 2">
+                            <img class="imagen" src="/images/productImages/hotline.png" alt="Hotline Miami 2">
                         </div>
                         <div class="info">
                             <h3 class="name">Hotline Miami 2</h3>
@@ -119,7 +119,7 @@
                     </article>
                     <article class="game game8">
                         <div class="container-img">
-                            <img class="imagen" src="/images/limbo.png" alt="Limbo">
+                            <img class="imagen" src="/images/productImages/limbo.png" alt="Limbo">
                         </div>
                         <div class="info">
                             <h3 class="name">Limbo</h3>
