--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -69,8 +69,8 @@
                     <% for (let index = 0; index < products.length; index++) { %>
                     <article class="game game1">
                         <div class="container-img">
-                            <!-- <img class="imagen" src=  <%= "/images/productImages/"+products[index].image %>  alt="<%= "/images/productImages/"+products[index].image %>"> -->
-                            <img class="imagen" src= "/images/cod.png"  alt=<%= "/images/productImages/"+products[index].image %>>
+                            <!-- <img class="imagen" src=  "<%= "/images/productImages/"+products[index].image_Secundaria %>"  alt="<%= "/images/productImages/"+products[index].image %>"> -->
+                            <img class="imagen" src= "/images/productImages/cod.png"  alt= "/images/productImages/cod.png">
                         </div>
 
                         <div id= 'info' class="info">
