--- a/src/views/signIn.ejs
+++ b/src/views/signIn.ejs
@@ -25,7 +25,7 @@
                     <div>
                         <label>Contraseña</label><br>
                         <input required placholder="" type="password" name="clave" class="input-fianriel"><br>
-                        <label>Me olvidé de algo...</label>
+                        <label><a href="#">Me olvidé de algo...</a></label>
                     </div>
 
                 </article>
