--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1065,6 +1065,7 @@ footer {
     margin-left: auto;
     margin-right: auto;
     padding-top: 20px;
+    margin-bottom: 22px;
 }
 
 .contenedor-productos-carro {
