--- a/src/views/edit-game.ejs
+++ b/src/views/edit-game.ejs
@@ -86,8 +86,8 @@
                 </div>
 
                 <div class="box-container photo-game">
-                    <label class="block tittle-m" for="photoGame" name="fotoUser">Imagen principal</label>
-                    <input class="block" type="file" name="photoGame"><img id= "imageEdit" src= <%= "/images/productImages/"+product.image %> alt="<%= product.image_Secundaria %>">
+                    <label class="block tittle-m" for="photoGameV" name="fotoUser">Imagen principal</label>
+                    <input class="block" type="file" name="photoGameV"><img id= "imageEdit" src= <%= "/images/productImages/"+product.image %> alt="<%= product.image_Secundaria %>">
                     <label class="block tittle-m" for="photoGame" name="fotoUser">Imagen secundaria</label>
                     <input class="block" type="file" name="photoGame"><img id= "imageEditV" src= <%= "/images/productImages/"+ product.image_Secundaria %> alt="<%= product.image_Secundaria %>">
                 </div>
