FIX foto vertical

--- a/src/views/new-game.ejs
+++ b/src/views/new-game.ejs
@@ -86,7 +86,7 @@
                 </div>
 
                 <div class="box-container photo-game">
-                    <label class="block tittle-m" for="photoGame" name="fotoUser">Imagen Vertical del VideoJuego</label>
+                    <label class="block tittle-m" for="photoGameV" name="fotoUser">Imagen Vertical del VideoJuego</label>
                     <input class="block" type="file" name="photoGame">
                     <label class="block tittle-m" for="photoGame" name="fotoUser">Imagen Horizontal del VideoJuego</label>
                     <input class="block" type="file" name="photoGame">
