--- a/src/views/signUp.ejs
+++ b/src/views/signUp.ejs
@@ -6,7 +6,7 @@
 <body class="body-fianriel">
     <main  class="main-fianriel">
         <button id="cart"><i class="fas fa-shopping-cart"></i></button>
-        <form action="/registro" method="POST" class="registro-box-fianriel">
+        <form action="/sign-up" method="POST" class="registro-box-fianriel" enctype="multipart/form-data">
             <h1 class="h1-fianriel">
                 Formulario de Registro <i class="fas fa-gamepad"></i>
             </h1>
@@ -14,35 +14,84 @@
             <section class="section-fianriel">
                 <article class="article-fianriel"> 
                     <div>
-                        <input placeholder= 'Nombre' name="nombre" type="text" placholder="Tu Nombre" required class="input-fianriel">
+                        <input placeholder= 'Nombre' name="nombre" type="text" placholder="Tu Nombre" class="input-fianriel" class="form-control <%= locals.errors && errors.nombre ? 'is-invalid' : null  %> " value="<%= locals.oldData ? oldData.nombre : null  %> ">
+                         <% if (locals.errors && errors.nombre) { %>                            
+                            <div class="text-danger">
+                                <%= errors.nombre.msg %> 
+                            </div>  
+                            <% } %>
                     </div>
                     <div>
-                        <input placeholder= 'Apellido' name="apellido" type="text" placholder="Tu Apellido" required class="input-fianriel">
+                        <input placeholder= 'Apellido' name="apellido" type="text" placholder="Tu Apellido" class="input-fianriel" class="form-control <%= locals.errors && errors.apellido ? 'is-invalid' : null  %> " value="<%= locals.oldData ? oldData.apellido : null  %> ">
+                        <% if (locals.errors && errors.apellido) { %>
+                            
+                            <div class="text-danger">
+                                <%= errors.apellido.msg %> 
+                            </div>  
+                            <% } %>
                     </div>
                     <div>
-                        <input placeholder= 'DNI' name="dni" type="number" required class="input-fianriel">
+                        <input placeholder= 'DNI' name="dni" type="number" class="input-fianriel" class="form-control <%= locals.errors && errors.dni ? 'is-invalid' : null  %> " value="<%= locals.oldData ? oldData.dni : null  %> ">
+                        <% if (locals.errors && errors.dni) { %>
+                            
+                            <div class="text-danger">
+                                <%= errors.dni.msg %> 
+                            </div>  
+                            <% } %>
                     </div>
                 </article>
-
+                <div class="avatar">
+                    <label>Imagen de perfil:</label><br>
+                    <input type="file" name="avatar">
+                    <% if (locals.errors && errors.avatar) { %>
+                    <div class="text-danger">
+                        <%= errors.avatar.msg %> 
+                    </div>  
+                    <% } %>
+                </div>
                 <br>
 
                 <article class="article-fianriel">
                     <div>
-                        <input required placeholder="Usuario" type="text" name="usuario" class="input-fianriel">
+                        <input placeholder="Usuario" type="text" name="usuario" class="input-fianriel" class="form-control <%= locals.errors && errors.usuario ? 'is-invalid' : null  %> " value="<%= locals.oldData ? oldData.usuario : null  %> ">
+                        <% if (locals.errors && errors.usuario) { %>
+                            
+                            <div class="text-danger">
+                                <%= errors.usuario.msg %> 
+                            </div>  
+                            <% } %>
                     </div>
 
                     <div>
-                        <input required placeholder="Mail" type="email" name="email" class="input-fianriel">
+                        <input placeholder="Mail" type="email" name="email" class="input-fianriel" class="form-control <%= locals.errors && errors.email ? 'is-invalid' : null  %> " value="<%= locals.oldData ? oldData.email : null  %> ">
+                        <% if (locals.errors && errors.email) { %>
+                            
+                            <div class="text-danger">
+                                <%= errors.email.msg %> 
+                            </div>  
+                            <% } %>
                     </div>
                 </article>
                 <br>
                 <article class="article-fianriel">
 
                     <div>
-                        <input required placeholder="Password" type="password" name="clave" class="input-fianriel">
+                        <input placeholder="Password" type="password" name="clave" class="input-fianriel" class="form-control <%= locals.errors && errors.password ? 'is-invalid' : null  %> ">
+                        <% if (locals.errors && errors.password) { %>
+                            
+                            <div class="text-danger">
+                                <%= errors.password.msg %> 
+                            </div>  
+                            <% } %>
                     </div>
                     <div>
-                        <input required placeholder="Password" type="password" name="clave2" class="input-fianriel">
+                        <input placeholder="Password" type="passwordConfirmation" name="clave2" class="input-fianriel" class="form-control <%= locals.errors && errors.password ? 'is-invalid' : null  %> " >
+                        <% if (locals.errors && errors.password) { %>
+                            
+                            <div class="text-danger">
+                                <%= errors.password.msg %> 
+                            </div>  
+                            <% } %>
                     </div>
                 </article>
 
@@ -52,13 +101,20 @@
                     <div>
                         <label>País</label><br>
                         <select name="pais" class="input-fianriel">
-                            <option selected>Argentina</option>
-                            <option>Brasil</option>
-                            <option>Uruguay</option>
-                            <option>China</option>
-                            <option>Mordor</option>
-                            <option>Polonia</option>
+                            <option value="">Elegí un país</option>
+                            <% 
+                            let countries = ["Afganistán","Albania","Alemania","Andorra","Angola","Antigua y Barbuda","Arabia Saudita","Argelia","Argentina","Armenia","Australia","Austria","Azerbaiyán","Bahamas","Bangladés","Barbados","Baréin","Bélgica","Belice","Benín","Bielorrusia","Birmania","Bolivia","Bosnia y Herzegovina","Botsuana","Brasil","Brunéi","Bulgaria","Burkina Faso","Burundi","Bután","Cabo Verde","Camboya","Camerún","Canadá","Catar","Chad","Chile","China","Chipre","Ciudad del Vaticano","Colombia","Comoras","Corea del Norte","Corea del Sur","Costa de Marfil","Costa Rica","Croacia","Cuba","Dinamarca","Dominica","Ecuador","Egipto","El Salvador","Emiratos Árabes Unidos","Eritrea","Eslovaquia","Eslovenia","España","Estados Unidos","Estonia","Etiopía","Filipinas","Finlandia","Fiyi","Francia","Gabón","Gambia","Georgia","Ghana","Granada","Grecia","Guatemala","Guyana","Guinea","Guinea ecuatorial","Guinea-Bisáu","Haití","Honduras","Hungría","India","Indonesia","Irak","Irán","Irlanda","Islandia","Islas Marshall","Islas Salomón","Israel","Italia","Jamaica","Japón","Jordania","Kazajistán","Kenia","Kirguistán","Kiribati","Kuwait","Laos","Lesoto","Letonia","Líbano","Liberia","Libia","Liechtenstein","Lituania","Luxemburgo","Madagascar","Malasia","Malaui","Maldivas","Malí","Malta","Marruecos","Mauricio","Mauritania","México","Micronesia","Moldavia","Mónaco","Mongolia","Montenegro","Mozambique","Namibia","Nauru","Nepal","Nicaragua","Níger","Nigeria","Noruega","Nueva Zelanda","Omán","Países Bajos","Pakistán","Palaos","Palestina","Panamá","Papúa Nueva Guinea","Paraguay","Perú","Polonia","Portugal","Reino Unido","República Centroafricana","República Checa","República de Macedonia","República del Congo","República Democrática del Congo","República Dominicana","República Sudafricana","Ruanda","Rumanía","Rusia","Samoa","San Cristóbal y Nieves","San Marino","San Vicente y las Granadinas","Santa Lucía","Santo Tomé y Príncipe","Senegal","Serbia","Seychelles","Sierra Leona","Singapur","Siria","Somalia","Sri Lanka","Suazilandia","Sudán","Sudán del Sur","Suecia","Suiza","Surinam","Tailandia","Tanzania","Tayikistán","Timor Oriental","Togo","Tonga","Trinidad y Tobago","Túnez","Turkmenistán","Turquía","Tuvalu","Ucrania","Uganda","Uruguay","Uzbekistán","Vanuatu","Venezuela","Vietnam","Yemen","Yibuti","Zambia","Zimbabue"]
+                            %>
+                            <% for (const oneCountry of countries) { %>  
+                            <option value="<%= oneCountry %>" <%= locals.oldData && (oneCountry === oldData.pais) ? 'selected' : null %>><%= oneCountry %></option>
+                            <% } %>
                         </select>
+                        <% if (locals.errors && errors.pais) { %>
+                            
+                            <div class="text-danger">
+                                <%= errors.pais.msg %> 
+                            </div>  
+                            <% } %>
                     </div>
                     <div>
                         <label>Provincia</label><br>
@@ -70,6 +126,12 @@
                             <option>esto</option>
                             <option>dependiente?</option>
                         </select>
+                        <% if (locals.errors && errors.provincia) { %>
+                            
+                            <div class="text-danger">
+                                <%= errors.provincia.msg %> 
+                            </div>  
+                            <% } %>
                     </div>
 
                 </article>
@@ -78,13 +140,31 @@
 
                 <article class="article-fianriel">
                     <div>
-                        <input placeholder= 'Dirección' type="text" name="direccion" class="input-fianriel">
+                        <input placeholder= 'Dirección' type="text" name="direccion" class="input-fianriel" class="form-control <%= locals.errors && errors.direccion ? 'is-invalid' : null  %> " value="<%= locals.oldData ? oldData.direccion : null  %> ">
+                        <% if (locals.errors && errors.direccion) { %>
+                            
+                            <div class="text-danger">
+                                <%= errors.direccion.msg %> 
+                            </div>  
+                            <% } %>
                     </div>
                     <div>
-                        <input placeholder= 'Número' type="number" name="numero" class="input-fianriel">
+                        <input placeholder= 'Número' type="number" name="numero" class="input-fianriel" class="form-control <%= locals.errors && errors.numero ? 'is-invalid' : null  %> " value="<%= locals.oldData ? oldData.numero : null  %> ">
+                        <% if (locals.errors && errors.numero) { %>
+                            
+                            <div class="text-danger">
+                                <%= errors.numero.msg %> 
+                            </div>  
+                            <% } %>
                     </div>
                     <div>
-                        <input placeholder= 'C.P.' type="number" name="cp" class="input-fianriel">
+                        <input placeholder= 'C.P.' type="number" name="cp" class="input-fianriel" class="form-control <%= locals.errors && errors.cp ? 'is-invalid' : null  %> " value="<%= locals.oldData ? oldData.cp : null  %> ">
+                        <% if (locals.errors && errors.cp) { %>
+                            
+                            <div class="text-danger">
+                                <%= errors.cp.msg %> 
+                            </div>  
+                            <% } %>
                     </div>
                 </article>
 
@@ -94,6 +174,12 @@
                     <div>
                         <input required type="checkbox" name="tcno" value="tyc" id="checks-fianriel"></input>
                         <label class="legales-fianriel">Acepto Términos y Condiciones</label>
+                        <% if (locals.errors && errors.tcno) { %>
+                            
+                            <div class="text-danger">
+                                <%= errors.tcno.msg %> 
+                            </div>  
+                            <% } %>
 
                         <br>
 
