EDIT process register completo

--- a/src/views/signUp.ejs
+++ b/src/views/signUp.ejs
@@ -85,7 +85,7 @@
                             <% } %>
                     </div>
                     <div>
-                        <input placeholder="Password" type="passwordConfirmation" name="clave2" class="input-fianriel" class="form-control <%= locals.errors && errors.password ? 'is-invalid' : null  %> " >
+                        <input placeholder="Password" type="password" name="clave2" class="input-fianriel" class="form-control <%= locals.errors && errors.password ? 'is-invalid' : null  %> " >
                         <% if (locals.errors && errors.password) { %>
                             
                             <div class="text-danger">
