--- a/src/views/signIn.ejs
+++ b/src/views/signIn.ejs
@@ -5,7 +5,7 @@
 <body>
     <main class="main-fianriel">
         <button id="cart"><i class="fas fa-shopping-cart"></i></button>
-        <form action="/registro" method="POST" class="registro-box-fianriel">
+        <form action="/log-in" method="POST" class="registro-box-fianriel">
             <h1>
                 Iniciar Sesión <i class="fas fa-gamepad"></i>
             </h1>
