EDIT sign in para recordar usuario

--- a/src/views/signIn.ejs
+++ b/src/views/signIn.ejs
@@ -30,7 +30,9 @@
                     <div>
                         <label>Contraseña</label><br>
                         <input required placholder="" type="password" name="clave" class="input-fianriel"><br>
-                        <label><a href="#">Me olvidé de algo...</a></label>
+                        <input type="checkbox" name="tyno" value="nyo" id="checks-fianriel"></button>
+                        <label class="remember">Recordar usuario</label><br>
+                        <label class="forget"><a href="#">Me olvidé de algo...</a></label>
                     </div>
 
                 </article>
