--- a/src/views/signUp.ejs
+++ b/src/views/signUp.ejs
@@ -6,7 +6,7 @@
 <body class="body-fianriel">
     <main  class="main-fianriel">
         <button id="cart"><i class="fas fa-shopping-cart"></i></button>
-        <form action="/sign-up" method="POST" class="registro-box-fianriel" enctype="multipart/form-data">
+        <form action="/user/sign-up" method="POST" class="registro-box-fianriel" enctype="multipart/form-data">
             <h1 class="h1-fianriel">
                 Formulario de Registro <i class="fas fa-gamepad"></i>
             </h1>
