--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -17,11 +17,11 @@
         </div>
         <% if (locals.isLogged) { %>
             <div class="logged">
-                <a href="/profile"><div class="userLogged"><%= locals.userLogged.usuario %><img class= "imgAvatarHeader" src="/images/avatars/<%=locals.userLogged.avatar %> "></a> / <a href= "/log-out">Log out  </a><i  id='fas' class="fas fa-gamepad"></i></div>
+                <a href="/user/profile"><div class="userLogged"><%= locals.userLogged.usuario %><img class= "imgAvatarHeader" src="/images/avatars/<%=locals.userLogged.avatar %> "></a> / <a href= "/user/log-out">Log out  </a><i  id='fas' class="fas fa-gamepad"></i></div>
             </div>
             <% } else { %> 
                 <div class="log-sign">
-                    <a href="/log-in">Log in</a> / <a href="/sign-up">Sign up</a> <i  id='fas' class="fas fa-gamepad"></i>
+                    <a href="/user/log-in">Log in</a> / <a href="/user/sign-up">Sign up</a> <i  id='fas' class="fas fa-gamepad"></i>
                 </div>
         <% } %> 
     <div class= "menu-desplegable">
